--- a/convex-atividade-real-time-database/package.json
+++ b/convex-atividade-real-time-database/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "npm-run-all --parallel dev:frontend dev:backend",
+    "dev:frontend": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "dev:backend": "convex dev",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -23,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
